--- a/src/app/modules/admin/components/commission-editor-modal/commission-editor-modal.component.html
+++ b/src/app/modules/admin/components/commission-editor-modal/commission-editor-modal.component.html
@@ -1,10 +1,10 @@
 <div class="modal-header">
     <div *ngIf="commission;else addHeader">
-        <h2 class="modal-title"><span>Editar comisión</span></h2>
+        <h2 class="modal-title"><span>{{ "ADMIN.COMMISSIONSTAB.MODALS.COMMISSION_EDITOR.EDIT_TITLE" | translate }}</span></h2>
         <h4 class="modal-subtitle">ID</h4>
     </div>
     <ng-template #addHeader>
-        <h2 class="modal-title"><span>Crear comisión</span></h2>
+        <h2 class="modal-title"><span>{{ "ADMIN.COMMISSIONSTAB.MODALS.COMMISSION_EDITOR.ADD_TITLE" | translate }}</span></h2>
     </ng-template>
     <button type="button" (click)="modalRef.hide()" class="btn">
         <mdb-icon fas icon="times" size="lg"></mdb-icon>
@@ -20,22 +20,23 @@
                    formControlName="id">
         </mat-form-field>
         <div formGroupName="title" class="mt-2">
-            <label>Título</label>
+            <label>{{ "ADMIN.COMMISSIONSTAB.MODALS.COMMISSION_EDITOR.TITLE_LABEL" | translate }}</label>
             <mat-form-field class="w-100">
-                <mat-label>Título en español</mat-label>
+                <mat-label>{{ "ADMIN.COMMISSIONSTAB.MODALS.COMMISSION_EDITOR.SPANISH_TITLE" | translate }}</mat-label>
                 <input matInput
                        type="text"
                        id="es"
                        formControlName="es">
             </mat-form-field>
             <mat-form-field class="w-100">
-                <mat-label>Título en Inglés</mat-label>
+                <mat-label>{{ "ADMIN.COMMISSIONSTAB.MODALS.COMMISSION_EDITOR.ENGLISH_TITLE" | translate }}</mat-label>
                 <input matInput
                        type="text"
                        id="en"
                        formControlName="en">
             </mat-form-field>
         </div>
+        <p><mat-slide-toggle formControlName="main">¿Comisión especial? (No aparece en la pagina de equipo)</mat-slide-toggle></p>
         <div *ngIf="error" class="error-container">
             <p class="error">
                 {{ error }}
@@ -50,7 +51,7 @@
     </div>
     <ng-template #loadSpinner>
         <div class="spinner-border text-primary" role="status">
-            <span class="sr-only">Loading...</span>
+            <span class="sr-only">{{ "ADMIN.COMMISSIONSTAB.MODALS.COMMISSION_EDITOR.LOADING" | translate }}</span>
         </div>
     </ng-template>
 </form>
