--- a/src/app/modules/team-request/pages/team-request.component.html
+++ b/src/app/modules/team-request/pages/team-request.component.html
@@ -1,20 +1,20 @@
 <div class="main-container d-flex justify-content-center">
     <mat-card class="p-3" *ngIf="!(areRequestsOpen$ | async); else form">
-        <mat-card-title class="text-center">Solicitudes cerradas</mat-card-title>
+        <mat-card-title class="text-center">{{ "TEAM_REQUEST.REQUESTS_CLOSE" | translate }}</mat-card-title>
         <mat-card-content class="mt-2">
-            <p>Esperá a que abran las solicitudes de equipo para enviar una.</p>
+            <p>{{ "TEAM_REQUEST.REQUESTS_CLOSE_MESSAGE" | translate }}</p>
         </mat-card-content>
     </mat-card>
     <ng-template #form>
         <mat-card class="py-3 px-2" *ngIf="(user$ | async).verifiedEmail; else verifyEmail">
             <mat-card-title class="text-center">
-                Registrate como miembro de IEEE ITBA
+              {{ "TEAM_REQUEST.TITLE" | translate }}
             </mat-card-title>
             <form>
                 <mat-card-content>
                     <section>
-                        <h2 class="m-0">Edita tu perfil</h2>
-                        <p>Verifica tu nombre y foto, aparecerá en la página de equipo</p>
+                        <h2 class="m-0">{{ "TEAM_REQUEST.EDIT_PROFILE" | translate }}</h2>
+                        <p>{{ "TEAM_REQUEST.VERIFY_DATA" | translate }}</p>
                         <div class="d-flex justify-content-center gap-5 flex-wrap">
                             <app-upload-picture-input [(photoURL)]="changedUser.photoURL" [(pictureType)]="pictureType"></app-upload-picture-input>
                             <div>
@@ -33,10 +33,10 @@
                         </div>
                     </section>
                     <section class="mt-2">
-                        <h2 class="m-0">Selecciona tu comisión y rol</h2>
+                        <h2 class="m-0">{{ "TEAM_REQUEST.SELECT_COMMISSION" | translate }}</h2>
                         <mat-form-field class="w-100 mt-2">
                             <mat-label>
-                                Comisión:
+                              {{ "TEAM_REQUEST.COMMISSION" | translate }}
                             </mat-label>
                             <mat-select required [(value)]="selectedCommission">
                                 <mat-option *ngFor="let commission of (commissions$ | async)" [value]="commission">
@@ -46,7 +46,7 @@
                         </mat-form-field>
                         <mat-form-field class="w-100" *ngIf="selectedCommission">
                             <mat-label>
-                                Rol:
+                              {{ "TEAM_REQUEST.POSITION" | translate }}
                             </mat-label>
                             <mat-select required [(value)]="selectedPosition">
                                 <mat-option *ngFor="let position of selectedCommission.positions" [value]="position">
@@ -59,7 +59,7 @@
                 <mat-card-footer class="w-100 d-flex justify-content-end px-3">
                     <button mat-raised-button class="save-button" color="primary" (click)="sendTeamRequest()" [disabled]="!canSendTeamRequest() || loading">
                         <mdb-icon fas [icon]="loading ? 'rotate' : 'paper-plane'" [class.rotate]="loading"></mdb-icon>
-                        <span class="ml-2">{{ loading ? "Cargando..." : "Enviar" }}</span>
+                        <span class="ml-2">{{ loading ? ("TEAM_REQUEST.LOADING" | translate) : ("TEAM_REQUEST.SEND" | translate) }}</span>
                     </button>
                 </mat-card-footer>
             </form>
@@ -67,14 +67,14 @@
     </ng-template>
     <ng-template #verifyEmail>
         <mat-card class="p-3">
-            <mat-card-title class="text-center">No verificado</mat-card-title>
+            <mat-card-title class="text-center">{{ "TEAM_REQUEST.NOT_VERIFIED" | translate }}</mat-card-title>
             <mat-card-content class="mt-2">
-                <p>Para mandar solicitud, necesitás tener verificar tu email.</p>
+                <p>{{ "TEAM_REQUEST.NOT_VERIFIED_MESSAGE" | translate }}</p>
             </mat-card-content>
             <mat-card-footer class="w-100 d-flex justify-content-end px-3">
                 <button mat-raised-button (click)="sendVerificationEmail()" class="save-button mt-2" color="primary" type="button">
                     <mdb-icon fas icon="envelope"></mdb-icon>
-                    <span class="ml-2">Enviar mail</span>
+                    <span class="ml-2">{{ "TEAM_REQUEST.SEND_EMAIL" | translate }}</span>
                 </button>
             </mat-card-footer>
         </mat-card>
