--- a/src/app/modules/write-news/pages/write-news/write-news.component.html
+++ b/src/app/modules/write-news/pages/write-news/write-news.component.html
@@ -48,15 +48,19 @@
             </mat-list-item>
             <mat-list-item>
               <!-- Image -->
-                <div class="w-100 d-flex flex-column mb-3 justify-content-center">
-                    <p class="m-2">{{ 'WRITE-NEW.COVERIMG' | translate }}</p>
-                    <input #pictureInput (change)="uploadImage($event)" type="file" accept="image/png, image/jpeg, image/jpg"
-                           class="d-none">
-                    <button mat-raised-button (click)="pictureInput.click()" color="primary" type="button">
-                        <mdb-icon fas icon="upload" class="mr-1"></mdb-icon>
-                        {{ 'PROFILE.BUTTONS.PICTURE_UPLOAD' | translate }}
-                    </button>
-                </div>
+<!--                <div class="w-100 d-flex flex-column mb-3 justify-content-center">-->
+<!--                    <p class="m-2">{{ 'WRITE-NEW.COVERIMG' | translate }}</p>-->
+<!--                    <input #pictureInput (change)="uploadImage($event)" type="file" accept="image/png, image/jpeg, image/jpg"-->
+<!--                           class="d-none">-->
+<!--                    <button mat-raised-button (click)="pictureInput.click()" color="primary" type="button">-->
+<!--                        <mdb-icon fas icon="upload" class="mr-1"></mdb-icon>-->
+<!--                        {{ 'PROFILE.BUTTONS.PICTURE_UPLOAD' | translate }}-->
+<!--                    </button>-->
+<!--                </div>-->
+              <mat-form-field class="w-100">
+                <mat-label>{{ 'WRITE-NEW.COVERIMG' | translate }}</mat-label>
+                <input id="imageUrl" matInput [(ngModel)]="newsContent.imageUrl">
+              </mat-form-field>
             </mat-list-item>
             <mat-list-item>
               <!-- Epigrafe -->
