--- a/src/app/modules/admin/pages/team-requests/team-requests.component.html
+++ b/src/app/modules/admin/pages/team-requests/team-requests.component.html
@@ -3,7 +3,10 @@
         <mat-card class="d-flex flex-row justify-content-between align-items-center gap-2 py-2 px-4">
             <div class="d-flex gap-2">
                 <mdb-icon class="d-flex align-items-center" fas [icon]="areRequestOpen ? 'circle-check' : 'triangle-exclamation'"></mdb-icon>
-                <p class="m-0">{{ areRequestOpen ? ("ADMIN.TEAMREQUESTSTAB.REQUESTS_OPEN" | translate) : ("ADMIN.TEAMREQUESTSTAB.REQUESTS_CLOSE" | translate) }}</p>
+                <div>
+                  <p class="m-0">{{ areRequestOpen ? ("ADMIN.TEAMREQUESTSTAB.REQUESTS_OPEN" | translate) : ("ADMIN.TEAMREQUESTSTAB.REQUESTS_CLOSE" | translate) }}</p>
+                  <a *ngIf="areRequestOpen" href="/team-request">https://ieeeitba.org.ar/team-request</a>
+                </div>
             </div>
             <div>
                 <button mat-raised-button (click)="setRequestsOpen(!areRequestOpen)" color="primary" type="button">
