Chore: Asimov page updates

--- a/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.css
+++ b/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.css
@@ -37,8 +37,8 @@
 
 .aboutus-container {
   display: inline-flex;
-  flex-direction: column;
-  justify-content: center;
+  width: 100%;
+  justify-content: space-evenly;
   gap: 1rem;
 }
 
