--- a/src/app/shared/components/event-content-card/event-content-card.component.css
+++ b/src/app/shared/components/event-content-card/event-content-card.component.css
@@ -24,3 +24,9 @@ mat-card {
 .not-available-background-color{
     background-color: lightgrey;
 }
+
+@media (max-width: 600px) {
+    .disabledOnMobile {
+        display: none;
+    }
+}
