--- a/src/app/shared/components/event-content-card/event-content-card.component.html
+++ b/src/app/shared/components/event-content-card/event-content-card.component.html
@@ -1,10 +1,10 @@
-<mat-card 
+<mat-card
 [ngClass]="{'not-available-background-color': disabled}"
 [style]="{ '--imageUrl': imageUrl }" class="content-card"
 fxFlexAlign="stretch"
 >
     <mat-card-header style="height: unset;">
-      <img *ngIf="image" mat-card-avatar src={{imageUrl}} class="card-image">
+      <img *ngIf="image" mat-card-avatar src={{imageUrl}} class="card-image" [class.disabledOnMobile]="disableImageOnMobile">
       <mat-card-title><b>{{title}}</b></mat-card-title>
     </mat-card-header>
     <mat-card-content class="flex-grow-1 overflow-auto mb-1">
