feat: asimov feature base module

--- a/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.css
+++ b/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.css
@@ -3,13 +3,18 @@
   list-style-type: none;
   grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 2rem;
-  padding: 1.5rem 10%;
+  padding: 0;
+  margin-bottom: 1rem;
+}
+
+.category-card-description {
+  padding: 0;
+  margin: 1rem 0 0 0;
 }
 
 @media(max-width: 960px) {
   .category-cards-container {
     grid-template-columns: repeat(1, minmax(0, 1fr));
-    padding: 1rem 5%;
   }
 
   .columned-section {
@@ -37,6 +42,7 @@
 
 .aboutus-container {
   display: inline-flex;
+  flex-wrap: wrap;
   width: 100%;
   justify-content: space-evenly;
   gap: 1rem;
