feat: tournament tree

--- a/src/app/modules/asimov-dashboard/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/asimov-dashboard/pages/dashboard/dashboard.component.html
@@ -1,1 +1,7 @@
 <p>dashboard works!</p>
+
+<app-tournament-tree
+    [initialEncounters]="myEncounters"
+    [robots]="myRobots"
+    (vote)="handleVote($event)">
+</app-tournament-tree>
