chore: asimov cup location and time set

--- a/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.css
+++ b/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.css
@@ -141,6 +141,18 @@
   font-weight: bolder;
 }
 
+.event-date-title {
+    font-size: 2rem;
+    font-weight: 600;
+    color: var(--color);
+    margin-bottom: 0;
+    padding: 0;
+}
+
+.event-date-title.asimov {
+    font-size: 15px;
+}
+
 .sponsor-section {
   display: flex;
   flex-direction: column;
