feat:implement pop-up service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,8 @@
     <app-loading-spinner></app-loading-spinner>
 </div>
 <app-footer [color]="(getAppColors() | async).background" *ngIf="!loading"></app-footer>
+<app-event-popup></app-event-popup>
+
 
 
 
