chore: asimov banner and time

--- a/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
+++ b/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.html
@@ -1,6 +1,6 @@
 <div class="main-container event">
   <app-event-banner
-    url="../../../../../assets/image/events/asimov-cup/asimov-cup-banner.png"
+    url="../../../../../assets/image/events/asimov-cup/asimov-cup-banner.jpg"
     alt="Asimov Cup - Competencia de Robótica"
   >
   </app-event-banner>
