feat: implemented robot loading from form

--- a/src/app/modules/asimov-admin/layout/layout.component.html
+++ b/src/app/modules/asimov-admin/layout/layout.component.html
@@ -1,1 +1,8 @@
-<p>layout works!</p>
+<app-admin-layout
+    [tabs]="tabs"
+    [pageTitle]="'ADMIN.TITLE'"
+    [seoPageTitle]="'ADMIN.PAGETITLE'"
+    [seoPageDescription]="'ADMIN.PAGEDESCRIPTION'"
+    [seoKeywords]="['ADMIN', 'IEEE', 'ITBA']"
+    [asimov]="true">
+</app-admin-layout>
