--- a/src/app/modules/asimov-admin/pages/robot-manager/robot-manager.component.html
+++ b/src/app/modules/asimov-admin/pages/robot-manager/robot-manager.component.html
@@ -1,1 +1,30 @@
-<p>robot-manager works!</p>
+<div class="table-container" cdkScrollable>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z2">
+
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> ID </th>
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Nombre </th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="category">
+            <th mat-header-cell *matHeaderCellDef> Categoría </th>
+            <td mat-cell *matCellDef="let element"> {{element.category.name}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="team">
+            <th mat-header-cell *matHeaderCellDef> Equipo </th>
+            <td mat-cell *matCellDef="let element"> {{element.team}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <app-loading-spinner *ngIf="isLoading$.getValue()"/>
+</div>
+<app-csv-upload-box (csvParsed)="onCsvFileParsed($event)"></app-csv-upload-box>
